# plantumlqeditor

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  README  README.cross  README.mime  README.qtsingleapplication  assistant.xml  assistantxmlreader.cpp  assistantxmlreader.h  filecache.cpp  filecache.h  main.cpp  mainwindow.cpp  mainwindow.h  plantuml-editor.pro  plantumlqeditor-mime.xml  plantumlqeditor-singleinstance.desktop  plantumlqeditor.desktop  plantumlqeditor.pro  plantumlqeditor.qrc  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  previewwidget.cpp  previewwidget.h  recentdocuments.cpp  recentdocuments.h  settingsconstants.h  textedit.cpp  textedit.h  utils.cpp  utils.h
tests/: CMakeLists.txt  assistantxmlreadertest.cpp  config.h.in  filecachetest.cpp  main.cpp  recentdocumentstest.cpp  tests.pro
tests/AccessCache/: AccessCache.pro  tst_accesscachetest.cpp
tests/AssistantXmlReader/: AssistantXmlReader.pro  tst_assistantxmlreadertest.cpp
